4-6_Network/4_Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"   # 正規表現を使用する
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # ２番目(.*)にマッチした文字列はを当てはめる
spec:
  rules:
    - host: "foo.bar.com" # DNS名でアクセスする必要がある
      http:
        paths:
          - pathType: Prefix    # 固定の先頭パス
            path: /foo          # 下記のサービスを foo.bar.com/foo に一致したら、次のバックエンドへ転送  
            backend:
              service:          # 転送するサービス名とポート番号
                name: foo-service
                port:
                  number: 8080
          - pathType: ImplementationSpecific  # 正規表現などに一致したパス
            path: /bar(/|$)(.*)               # /bar文字列を削除して、その下の文字列をリクエストに加える
            backend:
              service:  # 転送するサービス名とポート番号
                name: bar-service
                port:
                  number: 9100
    - http: # hostが設定されていないので、IPアドレスでアクセス可能
        paths:
          - pathType: Prefix
            path: /foo  # 下記のサービスを (トンネル または minikubeのIPアドレス)/foo へ付け替える
            backend:
              service:
                name: foo-service
                port:
                  number: 8080
